@@ -1,3 +1,4 @@
+ 02-Mar-2015:  CALACS 8.3.2 ACSREJ can now process longer input list.
  10-Oct-2014:  CALACS 8.3.1 ACS2D standalone executable now reads calibration
                             flags from header, not command line.
  08-Apr-2014:  CALACS 8.3.0 PCTECORR now supports WFC 2K subarrays.
