@@ -1,3 +1,6 @@
+Update for version 8.3.2 - 02-Mar-15 (PLL)
+    acsrej/mainrej.c
+
 Update for version 8.3.1 - 10-Oct-14 (PLL)
     acs2d/main2d.c
     acs2d/get2dsw.c
